# JSCRM-25 FE Edit Group Form
feature(backend, frontend): Add group icon support
